--- a/.github/workflows/seleniumbase-run.yml
+++ b/.github/workflows/seleniumbase-run.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Sample SeleniumBase Workflow
+name: Sample Smoke Test Workflow
 
 on: [push]
 
@@ -72,5 +72,5 @@ jobs:
 
     - name: Test seleniumbase test file using pytest command
       run: |
-        cd /home/runner/work/zenrooms-qa-automation/zenrooms-qa-automation/demo_tests
-        pytest my_first_test.py
+        cd /home/runner/work/zenrooms-qa-automation/zenrooms-qa-automation/smoke_tests
+        pytest pricing_smoke_tests.py -v -s
