--- a/.github/workflows/seleniumbase-run.yml
+++ b/.github/workflows/seleniumbase-run.yml
@@ -62,13 +62,14 @@ jobs:
       if: steps.get-cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
-        cd /home/runner/work/automation-devops-integ/
+        cd /home/runner/work/automation-devops-integ-main/
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: install cached dependencies
+      if: steps.get-cache.outputs.cache-hit = 'true'
       run: pip install -r requirements.txt
 
     - name: Test seleniumbase test file using pytest command
       run: |
-        cd /home/runner/work/automation-devops-integ/smoke_tests
+        cd /home/runner/work/automation-devops-integ-main/smoke_tests/
         pytest pricing_smoke_tests.py -v -s
