Fixed condition issue on cached dependency job

--- a/.github/workflows/seleniumbase-run.yml
+++ b/.github/workflows/seleniumbase-run.yml
@@ -66,7 +66,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: install cached dependencies
-      if: steps.get-cache.outputs.cache-hit = 'true'
+      if: steps.get-cache.outputs.cache-hit != 'false'
       run: pip install -r requirements.txt
 
     - name: Test seleniumbase test file using pytest command
