Added virtual environment on the test run script

--- a/.github/workflows/seleniumbase-run.yml
+++ b/.github/workflows/seleniumbase-run.yml
@@ -70,5 +70,9 @@ jobs:
 
     - name: Test seleniumbase test file using pytest command
       run: |
+        cd /home/runner/work/automation-devops-integ/automation-devops-integ/
+        pip install virtualenv
+        cd venv/Scripts
+        activate
         cd ./smoke_tests/
         pytest pricing_smoke_tests.py --env=staging
