--- a/.github/workflows/seleniumbase-run.yml
+++ b/.github/workflows/seleniumbase-run.yml
@@ -70,9 +70,7 @@ jobs:
 
     - name: Test seleniumbase test file using pytest command
       run: |
-        cd /home/runner/work/automation-devops-integ/automation-devops-integ/
-        pip install virtualenv
-        cd venv/Scripts
-        activate
+        python3 -m venv sbase_env
+        source sbase_env/bin/activate
         cd ./smoke_tests/
         pytest pricing_smoke_tests.py --env=staging
