--- a/.github/workflows/seleniumbase-run.yml
+++ b/.github/workflows/seleniumbase-run.yml
@@ -62,6 +62,8 @@ jobs:
       if: steps.get-cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
+        python3 -m venv sbase_env
+        source sbase_env/bin/activate
         pip install -U seleniumbase
         seleniumbase install chromedriver
 
@@ -70,7 +72,5 @@ jobs:
 
     - name: Test seleniumbase test file using pytest command
       run: |
-        python3 -m venv sbase_env
-        source sbase_env/bin/activate
         cd ./smoke_tests/
-        pytest pricing_smoke_tests.py --env=staging
+        python -m pytest pricing_smoke_tests.py --env=staging
