--- a/.github/workflows/Automation scheduled run.yml
+++ b/.github/workflows/Automation scheduled run.yml
@@ -1,9 +1,11 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Sample Smoke Test Workflow
+name: Sample Smoke Test Workflow for every 12hrs
 
-on: [push]
+on:
+  schedule:
+    - cron "* */12 * * *"
 
 jobs:
   build:
