--- a/.github/workflows/Automation scheduled run.yml
+++ b/.github/workflows/Automation scheduled run.yml
@@ -5,7 +5,7 @@ name: Sample Smoke Test Workflow for every 12hrs
 
 on:
   schedule:
-    - cron "* */12 * * *"
+    - cron: '* */12 * * *'
 
 jobs:
   build:
@@ -64,8 +64,7 @@ jobs:
       if: steps.get-cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
-        pip install -U seleniumbase
-        seleniumbase install chromedriver
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: install cached dependencies
       run: pip install -r requirements.txt
