--- a/.github/workflows/Post merge run.yml
+++ b/.github/workflows/Post merge run.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Sample Smoke Test Workflow for every 12hrs
+name: Sample Workflow for post merge on a specific branch
 
 on:
   push:
