--- a/.github/workflows/Post merge run.yml
+++ b/.github/workflows/Post merge run.yml
@@ -78,5 +78,5 @@ jobs:
 
     - name: Test seleniumbase test file using pytest command
       run: |
-        cd /zenrooms-qa-automation/pricing_model_tests/login/
+        cd ./login/
         python -m pytest test_login.py --env=staging
