--- a/.github/workflows/testspace CI.yml
+++ b/.github/workflows/testspace CI.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Push test results on TestSpace CI
 on:
   push:
 jobs:
@@ -10,7 +10,7 @@ jobs:
           fetch-depth: 50
       - uses: testspace-com/setup-testspace@v1
         with:
-          domain: ${{ github.repository_owner }}
+          domain: ${{ secrets.TESTSPACE_URL }}
       - name: Push result to Testspace server
         run: |
           testspace results.xml
