--- a/.github/workflows/testspace CI.yml
+++ b/.github/workflows/testspace CI.yml
@@ -10,7 +10,8 @@ jobs:
           fetch-depth: 50
       - uses: testspace-com/setup-testspace@v1
         with:
-          domain: ${{ secrets.TESTSPACE_URL }}
+          domain: ${{ github.repository_owner }}
+          token: ${{ secrets.TESTSPACE_TOKEN }}
       - name: Push result to Testspace server
         run: |
           testspace results.xml
