--- a/.github/workflows/Post merge run.yml
+++ b/.github/workflows/Post merge run.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Test seleniumbase test file using pytest command
       run: |
         cd $GITHUB_WORKSPACE/pricing_model_tests/login/
-        python -m pytest test_login.py --env=staging --junit-xml=../../reports/report.xml
+        python -m pytest test_login.py --env=staging --junit-xml=../../reports/results.xml
 
     - uses: testspace-com/setup-testspace@v1
       with:
