--- a/.github/workflows/Post merge run.yml
+++ b/.github/workflows/Post merge run.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Test seleniumbase test file using pytest command
       run: |
         cd $GITHUB_WORKSPACE/smoke_tests/
-        pytest pricing_smoke_tests.py --env=staging --junit-xml=../../reports/results.xml
+        pytest pricing_smoke_tests.py --env=staging --junit-xml=../reports/results.xml
 
     - uses: testspace-com/setup-testspace@v1
       with:
