--- a/.github/workflows/Post merge run.yml
+++ b/.github/workflows/Post merge run.yml
@@ -79,13 +79,17 @@ jobs:
     - name: Test seleniumbase test file using pytest command
       run: |
         cd $GITHUB_WORKSPACE/smoke_tests/
-        pytest pricing_smoke_tests.py --env=staging --junit-xml=../reports/results.xml
+        pytest pricing_smoke_tests.py --env=staging --alluredir=../reports/allure_results
 
-    - uses: testspace-com/setup-testspace@v1
-      with:
-        domain: ${{ github.repository_owner }}
-        token: ${{ secrets.TESTSPACE_TOKEN }}
-    - name: Push result to Testspace server
+    - name: Install allure CLI and create report file
       run: |
-        testspace $GITHUB_WORKSPACE/reports/results.xml
-      if: always()
+        allure serve $GITHUB_WORKSPACE/reports/results.xml
+
+#    - uses: testspace-com/setup-testspace@v1
+#      with:
+#        domain: ${{ github.repository_owner }}
+#        token: ${{ secrets.TESTSPACE_TOKEN }}
+#    - name: Push result to Testspace server
+#      run: |
+#        testspace $GITHUB_WORKSPACE/reports/results.xml
+#      if: always()
