--- a/.github/workflows/Post merge run.yml
+++ b/.github/workflows/Post merge run.yml
@@ -84,8 +84,8 @@ jobs:
     - name: Allure reports
       uses: afiore/action-allure-report@v0.1.0
       with:
-        results-dir: /reports/allure-results
-        report-dir: /reports/allure-results
+        results-dir: /reports/
+        report-dir: /reports/
 
     - name: Docker run for allure reports
       run: |
